First build to use LibericaJDK